--- a/src/voting-contracts/package.json
+++ b/src/voting-contracts/package.json
@@ -7,11 +7,20 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prettier-solidity": "prettier --write 'contracts/**/*.sol'",
+    "solhint": "./node_modules/.bin/solhint -f table contracts/**/*.sol",
+    "test-solidity": "truffle test"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@openzeppelin/contracts": "^4.7.0"
+    "@openzeppelin/contracts": "^4.7.0",
+    "@openzeppelin/test-helpers": "^0.5.15",
+    "prettier": "^2.7.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.19",
+    "solhint": "^3.3.7"
+  },
+  "dependencies": {
+    "truffle-assertions": "^0.9.2"
   }
 }
